--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,11 @@ pandas
 numpy
 matplotlib
 seaborn
-requests
 scikit-learn
-networkx
-statsmodels
 xgboost
-shap
-catboost
-pycaret
 lightgbm
-tsfresh
-pmdarima
-optuna
-mlxtend
-h2o
+catboost
+shap
+plotly
+prophet
+nltk
